<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context="test.adn.org.pendu.SettingsActivity">

    <TableLayout
        android:id="@+id/jeu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/entete"
        android:orientation="vertical"
        android:padding="4dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_pseudo" />

            <EditText
                android:id="@+id/edit_pseudo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_email" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_niveau_jeu" />

            <RadioGroup
                android:id="@+id/rdg_niveau"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rd_debutant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onNiveauButtonClicked"
                    android:text="@string/rd_debutant" />

                <RadioButton
                    android:id="@+id/rd_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNiveauButtonClicked"
                    android:text="@string/rd_normal" />

                <RadioButton
                    android:id="@+id/rd_expert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onNiveauButtonClicked"
                    android:text="@string/rd_expert" />

            </RadioGroup>

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_jouer_son" />

            <Switch
                android:id="@+id/sw_son"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSonChecked"
                />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_vibreur" />

            <Switch
                android:id="@+id/sw_vibreur"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onVibreurChecked" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_afficher_guide" />

            <Switch
                android:id="@+id/sw_guide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onGuideChecked" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_jouer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="jouer"
                android:text="@string/txt_jouer" />

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_meilleurs_scores"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:onClick="showScores"
                android:text="@string/txt_meilleurs_scores" />

        </TableRow>

    </TableLayout>

</ScrollView>
