<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="test.adn.org.pendu.MainActivity">

        <LinearLayout
            android:id="@+id/entete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/img_pendu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:src="@drawable/pendu_0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/jeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/entete"
            android:orientation="horizontal"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_nombre_cache"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/txt_nombre_saisi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btn_valider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="verifieNombre"
                    android:text="@string/btn_valider" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">


                <TextView
                    android:id="@+id/txt_guide_titre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_guide_jeu"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_guide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/jeu"
            android:orientation="vertical"
            android:padding="4dp"
            android:visibility="invisible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_saisis"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_res_essais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_cache"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_res_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="initialiserJeu"
                android:text="@string/btn_initialiser"
                android:textSize="10sp" />

        </LinearLayout>

    </RelativeLayout>


</ScrollView>
